SERVER-22130: Reset applier lastAppliedOptime after rollback