src/mongo/db/repl/bgsync.cpp
@@ -208,6 +208,18 @@ void BackgroundSync::producerThread() {
     stop();
 }
 
+void BackgroundSync::_signalNoNewDataForApplier() {
+    // Signal to consumers that we have entered the stopped state
+    // if the signal isn't already in the queue.
+    const boost::optional<BSONObj> lastObjectPushed = _buffer.lastObjectPushed();
+    if (!lastObjectPushed || !lastObjectPushed->isEmpty()) {
+        const BSONObj sentinelDoc;
+        _buffer.pushEvenIfFull(sentinelDoc);
+        bufferCountGauge.increment();
+        bufferSizeGauge.increment(sentinelDoc.objsize());
+    }
+}
+
 void BackgroundSync::_producerThread() {
     const MemberState state = _replCoord->getMemberState();
     // Stop when the state changes to primary.
@@ -216,15 +228,7 @@ void BackgroundSync::_producerThread() {
             stop();
         }
         if (_replCoord->isWaitingForApplierToDrain()) {
-            // Signal to consumers that we have entered the stopped state
-            // if the signal isn't already in the queue.
-            const boost::optional<BSONObj> lastObjectPushed = _buffer.lastObjectPushed();
-            if (!lastObjectPushed || !lastObjectPushed->isEmpty()) {
-                const BSONObj sentinelDoc;
-                _buffer.pushEvenIfFull(sentinelDoc);
-                bufferCountGauge.increment();
-                bufferSizeGauge.increment(sentinelDoc.objsize());
-            }
+            _signalNoNewDataForApplier();
         }
         sleepsecs(1);
         return;
@@ -407,10 +411,10 @@ void BackgroundSync::_produce(OperationContext* txn) {
 
         // Wait till all buffered oplog entries have drained and been applied.
         auto lastApplied = _replCoord->getMyLastOptime();
-        if (lastApplied != _lastOpTimeFetched) {
+        if (lastApplied != lastOpTimeFetched) {
             log() << "Waiting for all operations from " << lastApplied << " until "
-                  << _lastOpTimeFetched << " to be applied before starting rollback.";
-            while (_lastOpTimeFetched > (lastApplied = _replCoord->getMyLastOptime())) {
+                  << lastOpTimeFetched << " to be applied before starting rollback.";
+            while (lastOpTimeFetched > (lastApplied = _replCoord->getMyLastOptime())) {
                 sleepmillis(10);
                 if (isStopped() || inShutdown()) {
                     return;
@@ -690,6 +694,7 @@ void BackgroundSync::_rollback(OperationContext* txn,
                                RollbackSourceImpl(getConnection, source, rsOplogName),
                                _replCoord);
     if (status.isOK()) {
+        _signalNoNewDataForApplier();
         return;
     }
     if (ErrorCodes::UnrecoverableRollbackError == status.code()) {
